--- a/cssstart.test/www/style.css
+++ b/cssstart.test/www/style.css
@@ -4,6 +4,11 @@ body {
 nav {
     border: brown;
     border-style: groove;
+
+}
+nav:active {
+    border: blue;
+    border-style: double;
 }
 @media screen and (max-width: 1279px) {
     body {
@@ -14,4 +19,15 @@ section {
     padding: 50px 100px 250px 300px;
     border: chocolate;
     border-style: groove;
+}
+li::first-letter {
+    font-size: 2em;
+    font-style: oblique;
+}
+/*
+::spelling-error {
+    text-decoration: wavy red;
+} */
+p:active {
+    font-style: italic;
 }
