--- a/cssstart.test/www/style.css
+++ b/cssstart.test/www/style.css
@@ -93,16 +93,19 @@ section > h1 {
     display: inline-block;
     width: 100px;
     height: 100px;
+    border: 2px solid black;
 }
 .overfoluHidden {
     display: inline-block;
     width: 100px;
     height: 100px;
     overflow: hidden;
+    border: 2px solid black;
 }
 .overfoluScroll {
     display: inline-block;
     width: 100px;
     height: 100px;
     overflow: scroll;
+    border: 2px solid black;
 }
