--- a/cssstart.test/www/style.css
+++ b/cssstart.test/www/style.css
@@ -16,6 +16,16 @@ nav {
     border-bottom-right-radius: 10px;
     background: linear-gradient(90deg, rgb(123, 121, 161) 0%, rgb(247, 184, 173) 64%, rgba(0,212,255,1) 100%);
 }
+.toUP {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 100px;
+  height: 100px;
+}
+.upIMG {
+  max-width: 100%;
+}
 ul {
     display: flex;
     list-style-type: none;
@@ -53,7 +63,7 @@ section {
 
 
 }
-div {
+.wrapper-block {
     border: chocolate;
     display: block;
     border-style: groove;
@@ -65,7 +75,7 @@ div {
     margin-left: auto;
     margin-right: auto;
 }
-li {
+body > nav > ul > li {
     border: red;
     border-style: double;
     border-radius: 10px;
@@ -73,7 +83,7 @@ li {
     text-align: center;
 
 }
-li::first-letter {
+ body > nav > ul > li::first-letter {
     font-size: 2em;
     font-style: oblique;
 }
@@ -92,7 +102,7 @@ p:active {
     width: auto;
 }
 
-div > h1 {
+.wrapper-block > h1 {
     margin-bottom: 0px;
     margin-top: 0px;
     border: chocolate;
@@ -109,12 +119,16 @@ div > h1 {
 }
 
 .overfoluHidden {
+    vertical-align: top;
+    display: inline-block;
     overflow: hidden;
     width: 100px;
     height: 100px;
     border: 2px solid black;
 }
 .overfoluScroll {
+    vertical-align: top;
+    display: inline-block;
     overflow: scroll;
     width: 100px;
     height: 100px;
