--- a/cssstart.test/www/style.css
+++ b/cssstart.test/www/style.css
@@ -190,3 +190,31 @@ thead th, tfoot th, tfoot td {
   background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5));
   border: 3px solid purple;
 }
+a {
+  outline: none;
+  text-decoration: none;
+  padding: 2px 1px 0;
+}
+a:link {
+  color: #265301;
+}
+a:visited {
+  color:#437A16;
+}
+a:focus {
+  border-bottom: 1px solid;
+  background: #BAE498;
+}
+a:hover {
+  border-bottom: 1px solid;
+  background: #CDFEAA;
+}
+a:active {
+  background: #265301;
+  color: #CDFEAA;
+}
+a[href*="http"] {
+  background: url(/iconslink.png) no-repeat 100% 0;
+  background-size: 16px 16px;
+  padding-right: 19px;
+}
