--- a/cssstart.test/www/style.css
+++ b/cssstart.test/www/style.css
@@ -1,12 +1,14 @@
 html {
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(204,63,45,1) 64%, rgba(0,212,255,1) 100%);
-    font-family: 'helvetica neue', helvetica, arial, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    color: rgba(0,0,0,0.8);
 }
 
 body {
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgb(194, 190, 255) 0%, rgba(204,63,45,1) 64%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(194, 190, 255) 0%, rgba(204,63,45,1) 64%, rgb(194, 190, 255) 0%);
+    margin: auto;
 }
 
 nav {
@@ -69,7 +71,7 @@ section {
     border-style: groove;
     border-radius: 10px;
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgb(123, 121, 161) 0%, rgb(247, 184, 173) 64%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(123, 121, 161) 0%, rgb(247, 184, 173) 64%, rgb(123, 121, 161) 100%);
     width: 920px;
     height: auto;
     margin-left: auto;
@@ -81,12 +83,13 @@ body > nav > ul > li {
     border-radius: 10px;
     width: 10000px;
     text-align: center;
+    font-size: 40px;
 
 }
- body > nav > ul > li::first-letter {
+/* body > nav > ul > li::first-letter {
     font-size: 2em;
     font-style: oblique;
-}
+}*/
 /*
 ::spelling-error {
     text-decoration: wavy red;
@@ -105,11 +108,12 @@ p:active {
 .wrapper-block > h1 {
     margin-bottom: 0px;
     margin-top: 0px;
+    padding-left: 10px;
     border: chocolate;
     border-bottom-style: groove;
     margin-left: auto;
     margin-right: auto;
-    width: 920px;
+    width: auto;
 }
 .overfoluStandart {
     display: inline-block;
