Доделал форму баштура

--- a/webform.test/www/style.css
+++ b/webform.test/www/style.css
@@ -1,9 +1,7 @@
 form {
     margin: 0 auto;
-    width: 400px;
+    width: 600px;
     padding: 1em;
-    border: 1px solid #ccc;
-    border-radius: 1em;
 }
 ul {
     list-style: none;
@@ -21,7 +19,7 @@ form li + li {
 input,
 textarea {
     font: 1em sans-serif;
-    width: 300px;
+    width: 80%;
     box-sizing: border-box;
     border: 1px solid #999
 }
@@ -32,6 +30,7 @@ textarea:focus {
 textarea {
     vertical-align: top;
     height: 5em;
+    resize: none;
 }
 .button {
     padding-left: 90px;
