--- a/bashtour.test/www/style.css
+++ b/bashtour.test/www/style.css
@@ -1,5 +1,5 @@
 html {
-  width: 1920;
+  width: 100%;
   height: 4647px;
   background: #ffffff;
   margin: 0 auto;
@@ -10,4 +10,5 @@ header {
   height: 1080px;
   margin: 0;
   padding: 0;
+  border: none;
 }
