--- a/bashtour.test/www/style.css
+++ b/bashtour.test/www/style.css
@@ -331,3 +331,23 @@ li > a:hover {
   /* margin-top: 21px; */
   margin-right: 28px;
 }
+.howitwas > h1 {
+  text-align: center;
+  font-family: 'Playfair Display';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 48px;
+
+/* identical to box height */
+
+color: #111B20;
+}
+.imghowitwas {
+  margin: auto;
+  height: 590px;
+  width: 1200px;
+  display: inline-block;
+}
+.imghowitwas > img {
+}
