--- a/gk.test/www/style.css
+++ b/gk.test/www/style.css
@@ -281,6 +281,11 @@ a {
   color: #161f21;
 }
 .whatWe > h1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
   padding-top: 180px;
   text-align: center;
   font-family: "Merriweather";
