--- a/gk.test/www/style.css
+++ b/gk.test/www/style.css
@@ -438,3 +438,60 @@ a {
   padding-right: 47px;
   content: "";
 }
+.rewardsblock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1200px;
+  height: 283px;
+  border: 3px red solid;
+  margin: 0 auto;
+}
+.rewardsblock > h1 {
+  font-family: "Merriweather";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 40px;
+
+  /* black */
+  color: #161f21;
+}
+.rewards {
+  display: flex;
+}
+.rewardbarista {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  /* identical to box height */
+  text-align: center;
+  font-feature-settings: "pnum" on, "lnum" on;
+  /* black */
+  color: #161f21;
+}
+.rewardtext {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+
+  /* identical to box height, or 150% */
+  text-align: center;
+  font-feature-settings: "pnum" on, "lnum" on;
+
+  /* black */
+  color: #161f21;
+}
+.rewardimg {
+  width: 120px;
+  height: 100px;
+}
+.reward {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
